Activated data visualisation button to go to detail page and it deactivates if u select national comparisons or pie chart that are not yet implemented. Made a trim to the previous and next question under arrows to avoid text overflow.

--- a/static/custom/scss/common.scss
+++ b/static/custom/scss/common.scss
@@ -246,7 +246,7 @@
       .btn-main-color{
         background: $aquamarine;
         color: $white;
-        pointer-events: none;
+        //pointer-events: none;
         &[disabled] {
           opacity: 0.4;
           border: 1px dotted #57575A;
